--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -11,3 +11,25 @@
     border-bottom: var(--border-button);
     outline: none;
 }
+
+.button:active {
+    background-color: #ccc;
+
+}
+
+.button.double{
+    grid-column: span2;
+}
+
+.button.triple{
+    grid-column: span3;
+}
+
+.button.operation {
+    background-color:  #fa8231;
+    color: #FFF;
+}
+
+.button.button.operation:active {
+    background-color:  #fa8231cc;
+}
